# docs/swagger.yaml
@@ -203,7 +203,8 @@ paths:
       - health
   /readiness:
     get:
-      description: Indica que o serviço está pronto para receber tráfego
+      description: Indica que o serviço está pronto para receber tráfego (banco de
+        dados acessível)
       produces:
       - application/json
       responses:
@@ -211,6 +212,10 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/internal_infra_http_handlers.HealthyResponse'
+        "503":
+          description: Banco de dados indisponível
+          schema:
+            $ref: '#/definitions/github_com_diegodesousas_greeter_internal_infra_http.DefaultResponse'
       summary: Readiness probe
       tags:
       - health
